--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/GerosDB
 spring.datasource.username=root
 spring.datasource.password=Monch@4711
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.pattern.console=[%cyan(%d{dd/MM/YYYY - hh:mm:ss a})] [%yellow(%M)] [%magenta(%logger - %F)] [%highlight(%-5level)] - %msg%n
 logging.level.root=info
