--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -4,9 +4,19 @@ spring.datasource.url=jdbc:mysql://localhost:3306/GerosDB
 spring.datasource.username=root
 spring.datasource.password=Monch@4711
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 logging.pattern.console=[%cyan(%d{dd/MM/YYYY - hh:mm:ss a})] [%yellow(%M)] [%magenta(%logger - %F)] [%highlight(%-5level)] - %msg%n
 logging.level.root=info
 logging.file.path=logs
 logging.file.name=${logging.file.path}/logSeeder.log
 logging.pattern.file=[%d{dd/MM/YYYY - hh:mm:ss}] [%M] [%logger] [%-5level] - %msg%n
+logging.level.com.amazonaws.util.EC2MetadataUtils=error
+
+cloud.aws.credentials.access-key=AKIA2TLCSTVZOHI4ZUCH
+cloud.aws.credentials.secret-key=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
+cloud.aws.region.static=us-east-2
+cloud.aws.stack.auto=false
+application.bucket.name=geros-bucket
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
