Resolves Issue de Backend - refactor de application.properties

--- a/Back-end/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/Back-end/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -5,5 +5,10 @@
       "type": "java.lang.String",
       "description": "Description for application.bucket.name.",
       "defaultValue": "geros-bucket"
+    },
+    {
+      "name": "jwt.secret",
+      "type": "java.lang.String",
+      "description": "Description for jwt.secret."
     }
   ] }
