--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,5 @@ Back-end/.vscode/
 Front-end/.vscode
 Front-end/node_modules
 Front-end/.angular
-Front-end/src/environment.ts
+Front-end/src/environments/**
+Front-end/src/environment.**.ts
