--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -31,6 +31,7 @@
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.14.1",
     "dotenv": "^16.0.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
