--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,5 @@ Front-end/.vscode
 Front-end/node_modules
 Front-end/.angular
 Front-end/src/environments/**
-Front-end/src/environment.**.ts
+Front-end/src/environment.dev.ts
 Front-end/dist
