--- a/Front-end/angular.json
+++ b/Front-end/angular.json
@@ -39,7 +39,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "src": "src/environment.prod.ts"
+                  "replace": "src/environments/environment.prod.ts",
+                  "with": "src/environment.prod.ts"
                 }
               ],
               "optimization": true,
