Fix Netlify - se regresa a con http en local

--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,6 @@ Back-end/.vscode/
 Front-end/.vscode
 Front-end/node_modules
 Front-end/.angular
-Front-end/src/environment.dev.ts
+Front-end/src/environment.**.ts
+Front-end/src/environments/**
 Front-end/dist
